[gd_scene load_steps=4 format=3 uid="uid://jiyjn2l6ltjo"]

[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_6rvah"]
[ext_resource type="FontFile" uid="uid://dq2xslcmyvkwq" path="res://Assets/fonts/Xolonium-Regular.ttf" id="1_84qa6"]
[ext_resource type="PackedScene" uid="uid://mfxuhnqw1ffi" path="res://Scenes/Player.tscn" id="3_4puiu"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rvah")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)

[node name="Player" parent="." instance=ExtResource("3_4puiu")]
position = Vector2(238, 338)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -190.0
offset_top = 39.0
offset_right = 190.0
offset_bottom = 201.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_84qa6")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="GameTitleTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -254.0
offset_right = 66.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 14.0
offset_right = 50.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HowToPlayButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PanelTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="GameTitleTimer" to="." method="_on_game_title_timer_timeout"]
[connection signal="pressed" from="Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="PanelTimer" to="." method="_on_panel_timer_timeout"]
